--- a/apiMonitoring/views/index.ejs
+++ b/apiMonitoring/views/index.ejs
@@ -89,6 +89,7 @@
               ....Params....
 
             </div>
+            <!-- --authorization -->
             <div class="tab-pane fade" id="authorization" role="tabpanel" aria-labelledby="profile-tab">
               <table class = "header-auth">
                 <tr>
@@ -99,6 +100,7 @@
                 </tr>
               </table>
               <div class="form-basic-auth">
+                <div class="title-basic-auth">Basic Auth</div>
                 <span class="span3">
                   <input class="input-username-auth" type="text" name="usernameBasicAuth" placeholder="Username">
                 </span>
@@ -109,9 +111,38 @@
                   <a href="#"><img src="images/delete.png" alt="Delete params" ></a>
                 </span>
               </div>
+              <div class="form-bearer-token">
+                <div class="title-bearer-token">Bearer Token</div>
+                <span class="span11">
+                  <input class="input-bearer-token" type="text" name="bearerToken" placeholder="Token">
+                </span>
+                <span class="span1">
+                  <a href="#"><img src="images/delete.png" alt="Delete params" ></a>
+                </span>
+              </div>
             </div>
+            <!-- header -->
             <div class="tab-pane fade" id="headers" role="tabpanel" aria-labelledby="contact-tab">
-              .... Header ....
+              <div id="headerParams">
+                <div class="form-Params-header">
+                  <div class="line-1-param" id = "line-1-param-0">
+                    <span class="span3">
+                      <input class="input-name-header-0" type="text" name="nameParam-headder-0" placeholder="Name" autocomplete="off">                    
+                    </span>
+                    <span class="span8">
+                      <input class="input-value-header-0" type="text" name="valueParam-header-0" placeholder="Value" autocomplete="off" multiple>                      
+                    </span>
+                    <span class="span1-delete" id="span1-delete-0">
+                      <img src="images/delete.png" alt="Delete params" >
+                    </span>
+                  </div> 
+                </div>               
+                <br>
+                <div class="btn-add-param-header">                
+                  <img src="images/plus.png" alt="Add params" style="width: 15px;height: 15px;">                
+                </div>            
+                <hr>               
+              </div>
             </div>
             <div class="tab-pane fareqde" id="body" role="tabpanel" aria-labelledby="contact-tab">
               <div id="bodyParams">
@@ -132,9 +163,7 @@
                       <img src="images/delete.png" alt="Delete params" >
                     </span>
                   </div> 
-                </div> 
-                       
-               
+                </div>               
                 <br>
                 <div class="btn-add-param" >                
                   <img src="images/plus.png" alt="Add params" style="width: 15px;height: 15px;">                
@@ -147,7 +176,7 @@
                 <!-- <span>
                   <input type="file" name="filesabc" multiple> 
                 </span>   -->
-                <hr>     
+               
               </div>
             </div>
           </div>
