--- a/apiMonitoring/views/index.ejs
+++ b/apiMonitoring/views/index.ejs
@@ -84,10 +84,28 @@
           </ul>
           <hr>
           <div class="tab-content" id="myTabContent">
+            <!-- ....Params.... -->
             <div class="tab-pane fade show active" id="params" role="tabpanel" aria-labelledby="home-tab">
-
-              ....Params....
-
+              <div id="paramsParams">
+                <div class="form-Params-Params">
+                  <div class="line-1-param" id = "line-1-param-0">
+                    <span class="span3">
+                      <input class="input-name-param-0" type="text" name="nameParam-param-0" placeholder="Name" autocomplete="off">                    
+                    </span>
+                    <span class="span8">
+                      <input class="input-value-param-0" type="text" name="valueParam-param-0" placeholder="Value" autocomplete="off" multiple>                      
+                    </span>
+                    <span class="span1-delete" id="span1-delete-0">
+                      <img src="images/delete.png" alt="Delete params" >
+                    </span>
+                  </div> 
+                </div>               
+                <br>
+                <div class="btn-add-param-param">                
+                  <img src="images/plus.png" alt="Add params" style="width: 15px;height: 15px;">                
+                </div>            
+                <hr>               
+              </div>
             </div>
             <!-- --authorization -->
             <div class="tab-pane fade" id="authorization" role="tabpanel" aria-labelledby="profile-tab">
