--- a/apiMonitoring/views/index.ejs
+++ b/apiMonitoring/views/index.ejs
@@ -62,7 +62,7 @@
             <option value="delete">DELETE</option>
             <option value="put">PUT</option>
           </select>
-          <input type="http://apiFree" name="api" style="width: 500px;border-radius: 0px 5px 5px 0px; margin: 10px; margin-left: -5px;">
+          <input id="urlAPIID" class="urlAPI" type="http://apiFree" name="api" style="width: 500px;border-radius: 0px 5px 5px 0px; margin: 10px; margin-left: -5px;">
           <input type="submit" class="btn btn-primary" style="width: 100px; height: 27px; margin-bottom: 5px; padding-top: 0px;" value="SEND">
           <br>
           <hr>
