--- a/apiMonitoring/views/index.ejs
+++ b/apiMonitoring/views/index.ejs
@@ -38,19 +38,34 @@
       <div class="col-sm-3" style="background-color: rgb(211, 211, 207);">
         <nav class="navbar navbar-expand-lg navbar-light bg-light" id="menuTemp">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">History <span class="sr-only">(current)</span></a>
+
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item">
+                <a class="nav-link active" id="home-tab" data-toggle="tab" href="#history" role="tab" aria-controls="history" aria-selected="true">History</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Collection</a>
+                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#collection" role="tab" aria-controls="collection" aria-selected="false">Collection</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
+                <a class="nav-link" id="contact-tab" data-toggle="tab" href="#disabled" role="tab" aria-controls="disabled" aria-selected="false">Disabled</a>
               </li>
             </ul>
+            
           </div>
         </nav>
+        <hr>
+        <div class="tab-content" id="myTabContent">
+          <div class="tab-pane fade show active" id="history" role="tabpanel" aria-labelledby="history-tab">
+            <div id="history">
+              <ul>
+                
+              </ul>
+            </div>
+          </div>
+          <div class="tab-pane fade" id="collection" role="tabpanel" aria-labelledby="collection-tab">
+            Collection
+          </div>
+        </div>
       </div>
    
       <div class="col-sm-9" style="background-color: #FFFFFF; height: 100%;">
