--- a/apiMonitoring/views/index.ejs
+++ b/apiMonitoring/views/index.ejs
@@ -105,10 +105,10 @@
                 <div class="form-Params-Params">
                   <div class="line-1-param" id = "line-1-param-0">
                     <span class="span3">
-                      <input class="input-name-param-0" type="text" name="nameParam-param-0" placeholder="Name" onkeyup="autoEnterUrl()" autocomplete="off">                    
+                      <input class="input-name-param-0" type="text" name="nameParam-param-0" placeholder="Name"  autocomplete="off">                    
                     </span>
                     <span class="span8">
-                      <input class="input-value-param-0" type="text" name="valueParam-param-0" placeholder="Value" onkeyup="autoEnterUrl()" autocomplete="off">                      
+                      <input class="input-value-param-0" type="text" name="valueParam-param-0" placeholder="Value" autocomplete="off">                      
                     </span>
                     <span class="span1-delete" id="span1-delete-0">
                       <img src="images/delete.png" alt="Delete params" >
