--- a/apiMonitoring/public/stylesheets/style.css
+++ b/apiMonitoring/public/stylesheets/style.css
@@ -251,3 +251,17 @@ input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
 #paramsParams .line-1-param .span1-delete img:hover{
   content: url("../images/delete-hover.png");
 }
+#content{
+  position: relative;
+}
+#new-collection{
+  position: absolute;
+  top: 100px;
+  left: 150px;
+}
+#content{
+ z-index: 1;
+}
+#new-collection{
+  z-index: 2;
+}
