--- a/apiMonitoring/public/stylesheets/style.css
+++ b/apiMonitoring/public/stylesheets/style.css
@@ -10,11 +10,12 @@ body {
   height: 100%;
 }
 .row .col-sm-3{
-  background-color: rgb(211, 211, 207);
+  /* background-color: rgb(211, 211, 207); */
 }
 .row .col-sm-9{
   background-color: #FFFFFF; 
   height: 100%;
+  border-left: 2px solid #F5F5F5;
 }
 .row .col-sm-9 nav a{
   color: coral;
@@ -67,8 +68,19 @@ a {
   border-style: 1px solid  #BEBEBE;
 }
 #menuTemp{
-  border-radius: 5px;
+  /* border-radius: 5px; */
   color: black;
+  padding: 0px;
+}
+#myTabContent{
+  padding-top: 20px;
+  background: white;
+  border-right: 2px solid #F5F5F5;
+  border-left: 2px solid #F5F5F5;
+  border-bottom: 2px solid #F5F5F5 ;
+}
+#myTabContentParam{
+ 
 }
 a{
   color: white;
@@ -309,9 +321,79 @@ input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   height:"150px"
 }
 .form_product a{
-  color: : black;
+  color: black;
 }
 .form_product span{
   color: #FFD700; 
   font-size: 20px
+}
+/* panel left */
+#history .ul-history{
+  background: white;
+  height: 100% screen;
+  list-style: none;
+  padding-left: 10%;
+}
+#history .ul-history li img{
+  height: 15px;
+  width: 15px;
+  float: right;
+  margin-right: 10px;
+  margin-top: 5px;
+}
+#history .ul-history .lv0-date-history{
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+/* #history .ul-history .lv0-date-history:hover{
+  background-color: yellow;
+} */
+#history .ul-history .lv0-history{
+  margin: 0;
+  margin-left: -10px;
+  padding: 0;
+  overflow: hidden;
+  display: inline-flex;
+  height: 100%;
+  align-items: center;
+  width: 100%;
+}
+#history .ul-history .lv0-history p{
+  width: 80%;
+  word-wrap: break-word;
+  margin-left: 10px;
+  margin-bottom: 0px;
+}
+#history .ul-history .lv0-history span{
+  text-transform: uppercase;
+  font-weight: bold;
+}
+/* tablet */
+@media only screen and (min-width: 600px){
+  #history .ul-history .lv0-history p{
+    width: 65%;
+    word-wrap: break-word;
+    margin-left: 10px;
+    margin-bottom: 0px;
+  }
+}
+/* desktop */
+@media only screen and (min-width: 1224px){
+  #history .ul-history .lv0-history p{
+    width: 80%;
+    word-wrap: break-word;
+    margin-left: 10px;
+    margin-bottom: 0px;
+  }
+}
+/*smartphone */
+@media only screen and (max-width : 600px){
+  #history .ul-history .lv0-history p{
+    width: 80%;
+    word-wrap: break-word;
+    margin-left: 10px;
+    margin-bottom: 0px;
+  }
 }
