--- a/apiMonitoring/views/index.ejs
+++ b/apiMonitoring/views/index.ejs
@@ -43,10 +43,10 @@
     
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                   <li class="nav-item">
-                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#history" role="tab" aria-controls="history" aria-selected="true">History</a>
+                    <a class="nav-link" id="history-tab" data-toggle="tab" href="#history" role="tab" aria-controls="history" aria-selected="true">History</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#collection" role="tab" aria-controls="collection" aria-selected="false">Collection</a>
+                    <a class="nav-link" id="collection-tab" data-toggle="tab" href="#collection" role="tab" aria-controls="collection" aria-selected="false">Collection</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" id="contact-tab" data-toggle="tab" href="#disabled" role="tab" aria-controls="disabled" aria-selected="false">Disabled</a>
@@ -64,13 +64,50 @@
                 </div>
               </div>
               <div class="tab-pane fade" id="collection" role="tabpanel" aria-labelledby="collection-tab">
-                <div class="row" style="background-color: rgb(235, 232, 232);">
+                <div class="row" style="background-color: rgb(250, 193, 167); border-radius: 5px; border-style: none;">
                   <div class="col-3"></div>
                   <div class="col-8">
-                    <button class="btn-create-collection" style="height: 40px; border-style: hidden; background-color: rgb(235, 232, 232);">
+                    <button class="btn-create-collection" style="height: 50px; border-style: hidden; background-color: rgb(245, 240, 238); border-radius: 5px; border-style: none;">
                       <img src="images/plus.png" alt="Add params" style="width: 15px;height: 15px;"> New collection  
                     </button>
                   </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <% if(rs.listCollection){
+                      for(let i=0;i<rs.listCollection.length;i++){
+                        let row = rs.listCollection[i];%>
+                        <hr>
+                        <div class="row" id="eachCollection">
+                          <div class="col-10" >
+                            <button style="height: 40px; border-style: hidden; background-color: rgb(235, 232, 232); margin-left: 20px; margin-top: 20px;">
+                              <svg class="bi bi-folder-plus" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M9.828 4H2.19a1 1 0 00-.996 1.09l.637 7a1 1 0 00.995.91H9v1H2.826a2 2 0 01-1.991-1.819l-.637-7a1.99 1.99 0 01.342-1.31L.5 3a2 2 0 012-2h3.672a2 2 0 011.414.586l.828.828A2 2 0 009.828 3h3.982a2 2 0 011.992 2.181L15.546 8H14.54l.265-2.91A1 1 0 0013.81 4H9.828zm-2.95-1.707L7.587 3H2.19c-.24 0-.47.042-.684.12L1.5 2.98a1 1 0 011-.98h3.672a1 1 0 01.707.293z" clip-rule="evenodd"/>
+                                <path fill-rule="evenodd" d="M13.5 10a.5.5 0 01.5.5v2a.5.5 0 01-.5.5h-2a.5.5 0 010-1H13v-1.5a.5.5 0 01.5-.5z" clip-rule="evenodd"/>
+                                <path fill-rule="evenodd" d="M13 12.5a.5.5 0 01.5-.5h2a.5.5 0 010 1H14v1.5a.5.5 0 01-1 0v-2z" clip-rule="evenodd"/>
+                              </svg>
+                              <span style=" margin-left: 5px; margin-top: 3px; font-size: 20px;"><%= row.casetest%></span>
+                            </button>
+                          </div>
+                          <div class="col-2">
+                            <a id="runCollection" onclick="run()">
+                              <svg class="bi bi-play-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M11.596 8.697l-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 010 1.393z"/>
+                              </svg>
+                            </a>
+                            <hr>
+                            <a id="other">
+                              <svg class="bi bi-three-dots" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M3 9.5a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3z" clip-rule="evenodd"/>
+                              </svg>
+                            </a>
+                            
+                          </div>
+                        </div>
+                        
+                      <% }}%>
+                  </div>
+                  
                 </div>
                 <hr>
               </div>
@@ -280,9 +317,9 @@
             <p style="padding-left: 10px;">This description will show in your collection’s documentation, along with the descriptions of its folders and requests</p>
             <input name="description" type="text" style="width: 800px; height: 300px;border-radius: 5px; margin-left: 50px;">
             <hr>
-            <button class="btn-create-successfully" type="submit" style="background-color: rgb(47, 14, 192); color: white; width: 100px;height: 40px;margin-left: 350px;">Create</button>
+            <input class="btn-create-successfully" type="submit" value="Create" style="background-color: rgb(47, 14, 192); color: white; width: 100px;height: 40px;margin-left: 350px;">
             <span>
-              <button class="btn-cancle-create" style="background-color: rgb(223, 16, 16);color: white; width: 100px;height: 40px; margin-bottom: 20px;">Cancle</button>
+              <button class="btn-cancle-create" type="button" style="background-color: rgb(223, 16, 16);color: white; width: 100px;height: 40px; margin-bottom: 20px;">Cancle</button>
             </span>
           </form>
         </div>
