--- a/apiMonitoring/views/index.ejs
+++ b/apiMonitoring/views/index.ejs
@@ -59,7 +59,18 @@
             <div class="tab-content" id="myTabContent">
               <div class="tab-pane fade show active" id="history" role="tabpanel" aria-labelledby="history-tab">
                 <div id="history">
-                  <ul>
+                  <ul class="ul-history">
+                    <li class="form-history">                
+                      <!-- <ul class="lv0-date-history">
+                        <span>14/04 - 3:44pm</span>
+                      </ul>                
+                      <ul class="lv0-history">
+                        <span id="method-history">get</span>
+                        <p id="url-history">abnnnnnnnnnnnnnnnbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb</p>
+                      </ul>              -->
+                      <!-- <hr> -->
+                    </li>
+                                             
                   </ul>
                 </div>
               </div>
