--- a/apiMonitoring/public/stylesheets/style.css
+++ b/apiMonitoring/public/stylesheets/style.css
@@ -273,3 +273,72 @@ input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   height: 40px;
   width: 50px;
 }
+/* panel left */
+#history .ul-history{
+  background: white;
+  height: 100% screen;
+  list-style: none;
+  padding-left: 10%;
+}
+#history .ul-history li img{
+  height: 15px;
+  width: 15px;
+  float: right;
+  margin-right: 10px;
+  margin-top: 5px;
+}
+#history .ul-history .lv0-date-history{
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+/* #history .ul-history .lv0-date-history:hover{
+  background-color: yellow;
+} */
+#history .ul-history .lv0-history{
+  margin: 0;
+  margin-left: -10px;
+  padding: 0;
+  overflow: hidden;
+  display: inline-flex;
+  height: 100%;
+  align-items: center;
+  width: 100%;
+}
+#history .ul-history .lv0-history p{
+  width: 80%;
+  word-wrap: break-word;
+  margin-left: 10px;
+  margin-bottom: 0px;
+}
+#history .ul-history .lv0-history span{
+  text-transform: uppercase;
+  font-weight: bold;
+}
+/* tablet */
+@media only screen and (min-width: 600px){
+  #history .ul-history .lv0-history p{
+    width: 65%;
+    word-wrap: break-word;
+    margin-left: 10px;
+    margin-bottom: 0px;
+  }
+}
+/* desktop */
+@media only screen and (min-width: 1224px){
+  #history .ul-history .lv0-history p{
+    width: 80%;
+    word-wrap: break-word;
+    margin-left: 10px;
+    margin-bottom: 0px;
+  }
+}
+/*smartphone */
+@media only screen and (max-width : 600px){
+  #history .ul-history .lv0-history p{
+    width: 80%;
+    word-wrap: break-word;
+    margin-left: 10px;
+    margin-bottom: 0px;
+  }
